Fix tag dropdown getting stuck behind "not found" overlay

--- a/resources/assets/sass/application/dashboard/_dashboard_global.scss
+++ b/resources/assets/sass/application/dashboard/_dashboard_global.scss
@@ -279,7 +279,7 @@
     opacity: 0;
     pointer-events: none;
     position: absolute; top: 45px; left: 0;
-    z-index: 99;
+    z-index: 98;
     &.active {
       opacity: 1;
       pointer-events: auto;
